# application/contact-service/src/main/java/ro/rasel/spring/microservices/contactservice/controller/v1/dto/ContactDetails.java
@@ -1,42 +1,38 @@
-package ro.rasel.spring.microservices.contactservice.controller.dto;
+package ro.rasel.spring.microservices.contactservice.controller.v1.dto;
 
-import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 
 import javax.validation.constraints.NotBlank;
 import javax.validation.constraints.Pattern;
-import java.beans.ConstructorProperties;
+import java.util.List;
 import java.util.Objects;
 import java.util.StringJoiner;
 
 import static ro.rasel.spring.microservices.contactservice.utils.Constants.EMAIL_PATTERN_STRING;
 
-@ApiModel(description = "User Contacts")
-public class ContactDetailsDto {
-
-    @NotBlank
+public class ContactDetails<P extends PhoneNumberDto, A extends AddressDto> {
     private String firstName;
-
-    @NotBlank
     private String lastName;
-
-    @Pattern(regexp = EMAIL_PATTERN_STRING)
     private String email;
-
-    @NotBlank
     private String relationship;
+    private List<P> phoneNumbers;
+    private List<A> addresses;
 
-    ContactDetailsDto() {
+    public ContactDetails() {
     }
 
-    @ConstructorProperties({"firstName", "lastName", "email", "relationship"})
-    public ContactDetailsDto(String firstName, String lastName, String email, String relationship) {
+    public ContactDetails(
+            String firstName, String lastName, String email, String relationship, List<P> phoneNumbers,
+            List<A> addresses) {
         this.firstName = firstName;
         this.lastName = lastName;
         this.email = email;
         this.relationship = relationship;
+        this.phoneNumbers = phoneNumbers;
+        this.addresses = addresses;
     }
 
+    @NotBlank
     @ApiModelProperty(value = "First name")
     public String getFirstName() {
         return firstName;
@@ -46,6 +42,7 @@ public class ContactDetailsDto {
         this.firstName = firstName;
     }
 
+    @NotBlank
     @ApiModelProperty(value = "Last name")
     public String getLastName() {
         return lastName;
@@ -56,6 +53,7 @@ public class ContactDetailsDto {
     }
 
     @ApiModelProperty(value = "Email")
+    @Pattern(regexp = EMAIL_PATTERN_STRING)
     public String getEmail() {
         return email;
     }
@@ -64,6 +62,7 @@ public class ContactDetailsDto {
         this.email = email;
     }
 
+    @NotBlank
     @ApiModelProperty(value = "Relationship")
     public String getRelationship() {
         return relationship;
@@ -71,6 +70,22 @@ public class ContactDetailsDto {
 
     public void setRelationship(String relationship) {
         this.relationship = relationship;
+    }
+
+    public List<P> getPhoneNumbers() {
+        return phoneNumbers;
+    }
+
+    public void setPhoneNumbers(List<P> phoneNumbers) {
+        this.phoneNumbers = phoneNumbers;
+    }
+
+    public List<A> getAddresses() {
+        return addresses;
+    }
+
+    public void setAddresses(List<A> addresses) {
+        this.addresses = addresses;
     }
 
     @Override
@@ -81,25 +96,29 @@ public class ContactDetailsDto {
         if (o == null || getClass() != o.getClass()) {
             return false;
         }
-        ContactDetailsDto that = (ContactDetailsDto) o;
+        ContactDetails<?, ?> that = (ContactDetails<?, ?>) o;
         return Objects.equals(firstName, that.firstName) &&
                 Objects.equals(lastName, that.lastName) &&
                 Objects.equals(email, that.email) &&
-                Objects.equals(relationship, that.relationship);
+                Objects.equals(relationship, that.relationship) &&
+                Objects.equals(phoneNumbers, that.phoneNumbers) &&
+                Objects.equals(addresses, that.addresses);
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(firstName, lastName, email, relationship);
+        return Objects.hash(firstName, lastName, email, relationship, phoneNumbers, addresses);
     }
 
     @Override
     public String toString() {
-        return new StringJoiner(", ", ContactDetailsDto.class.getSimpleName() + "[", "]")
+        return new StringJoiner(", ", ContactDetails.class.getSimpleName() + "[", "]")
                 .add("firstName='" + firstName + "'")
                 .add("lastName='" + lastName + "'")
                 .add("email='" + email + "'")
                 .add("relationship='" + relationship + "'")
+                .add("phoneNumbers=" + phoneNumbers)
+                .add("addresses=" + addresses)
                 .toString();
     }
 }
