# application/contact-service/src/main/java/ro/rasel/spring/microservices/contactservice/controller/v1/dto/ContactResponse.java
@@ -1,4 +1,4 @@
-package ro.rasel.spring.microservices.contactservice.controller.dto;
+package ro.rasel.spring.microservices.contactservice.controller.v1.dto;
 
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
@@ -7,11 +7,12 @@ import ro.rasel.spring.microservices.commons.utils.validators.Validators;
 
 import javax.validation.constraints.NotBlank;
 import java.beans.ConstructorProperties;
+import java.util.List;
 import java.util.Objects;
 import java.util.StringJoiner;
 
 @ApiModel(description = "User Contacts")
-public class ContactDto extends ContactDetailsDto {
+public class ContactResponse extends ContactDetails<PhoneNumberResponse, AddressResponse> {
     private static final Validator<CharSequence> USER_ID_VALIDATOR = Validators.notBlankValidator("userId");
 
     private Long id;
@@ -19,18 +20,21 @@ public class ContactDto extends ContactDetailsDto {
     @NotBlank
     private String userId;
 
-    ContactDto() {
+    public ContactResponse() {
     }
 
-    @ConstructorProperties({"id", "userId", "firstName", "lastName", "email", "relationship"})
-    public ContactDto(
-            long id, String userId, String firstName, String lastName, String email, String relationship) {
-        this(userId, firstName, lastName, email, relationship);
+    @ConstructorProperties({"id", "userId", "firstName", "lastName", "email", "relationship", "phoneNumbers", "addresses"})
+    public ContactResponse(
+            long id, String userId, String firstName, String lastName, String email, String relationship,
+            List<PhoneNumberResponse> phoneNumbers, List<AddressResponse> addresses) {
+        this(userId, firstName, lastName, email, relationship, phoneNumbers, addresses);
         this.id = id;
     }
 
-    public ContactDto(String userId, String firstName, String lastName, String email, String relationship) {
-        super(firstName, lastName, email, relationship);
+    public ContactResponse(
+            String userId, String firstName, String lastName, String email, String relationship,
+            List<PhoneNumberResponse> phoneNumbers, List<AddressResponse> addresses) {
+        super(firstName, lastName, email, relationship, phoneNumbers, addresses);
 
         this.userId = USER_ID_VALIDATOR.validate(userId);
     }
@@ -61,10 +65,12 @@ public class ContactDto extends ContactDetailsDto {
         if (o == null || getClass() != o.getClass()) {
             return false;
         }
-        ContactDto contactDto = (ContactDto) o;
-        return super.equals(o) &&
-                Objects.equals(id, contactDto.id) &&
-                Objects.equals(userId, contactDto.userId);
+        if (!super.equals(o)) {
+            return false;
+        }
+        ContactResponse that = (ContactResponse) o;
+        return Objects.equals(id, that.id) &&
+                Objects.equals(userId, that.userId);
     }
 
     @Override
@@ -74,13 +80,10 @@ public class ContactDto extends ContactDetailsDto {
 
     @Override
     public String toString() {
-        return new StringJoiner(", ", ContactDto.class.getSimpleName() + "[", "]")
+        return new StringJoiner(", ", ContactResponse.class.getSimpleName() + "[", "]")
                 .add("id=" + id)
                 .add("userId='" + userId + "'")
-                .add("relationship='" + getRelationship() + "'")
-                .add("firstName='" + getFirstName() + "'")
-                .add("lastName='" + getLastName() + "'")
-                .add("email='" + getEmail() + "'")
-                .toString();
+                .toString()
+                + " " + super.toString();
     }
 }
