# application/passport-service/src/main/java/ro/rasel/spring/microservices/passportservice/controller/PassportRestController.java
@@ -3,7 +3,7 @@ package ro.rasel.spring.microservices.passportservice.controller;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RestController;
-import ro.rasel.spring.microservices.passportservice.controller.dto.PassportDto;
+import ro.rasel.spring.microservices.passportservice.controller.dto.PassportResponse;
 import ro.rasel.spring.microservices.passportservice.domain.Passport;
 import ro.rasel.spring.microservices.passportservice.service.PassportService;
 
@@ -17,9 +17,9 @@ public class PassportRestController implements PassportApi {
     }
 
     @Override
-    public ResponseEntity<PassportDto> getPassport(@PathVariable String userId) {
+    public ResponseEntity<PassportResponse> getPassport(@PathVariable String userId) {
         final Passport passport = passportService.getPassport(userId);
         return passport == null ? ResponseEntity.notFound().build() :
-                ResponseEntity.ok(new PassportDto(passport));
+                ResponseEntity.ok(new PassportResponse(passport.getUserId(), passport.getBookmarks(),passport.getContacts()));
     }
 }
