# application/passport-service/swagger/contact-service-swagger.json
@@ -1,296 +1,349 @@
 {
-  "swagger": "2.0",
-  "info": {
-    "description": "Basic resource service used for exposing data from database.",
-    "version": "0.0.1-SNAPSHOT",
-    "title": "contact-service"
+  "swagger" : "2.0",
+  "info" : {
+    "description" : "Basic resource service used for exposing data from database.",
+    "version" : "0.0.1-SNAPSHOT",
+    "title" : "contact-service"
   },
-  "tags": [
-    {
-      "name": "contact"
-    }
-  ],
-  "schemes": [
-    "https"
-  ],
-  "paths": {
-    "/v1/users/{userId}/contacts": {
-      "get": {
-        "tags": [
-          "contact"
-        ],
-        "summary": "get contacts",
-        "description": "Get a list of contacts",
-        "operationId": "getContacts",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Contact"
+  "tags" : [ {
+    "name" : "contact"
+  } ],
+  "schemes" : [ "https" ],
+  "paths" : {
+    "/v1/users/{userId}/contacts" : {
+      "get" : {
+        "tags" : [ "contact" ],
+        "summary" : "get contacts",
+        "description" : "Get a list of contacts",
+        "operationId" : "getContacts",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "userId",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Ok",
+            "schema" : {
+              "type" : "array",
+              "items" : {
+                "$ref" : "#/definitions/ContactResponse"
               }
             }
           },
-          "404": {
-            "description": "Not found"
+          "404" : {
+            "description" : "Not found"
           },
-          "500": {
-            "description": "Internal server error"
+          "500" : {
+            "description" : "Internal server error"
           }
         }
       },
-      "post": {
-        "tags": [
-          "contact"
-        ],
-        "summary": "add contact",
-        "description": "Create a new contact and return it",
-        "operationId": "createContact",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "in": "body",
-            "name": "body",
-            "required": false,
-            "schema": {
-              "$ref": "#/definitions/ContactDetails"
-            }
+      "post" : {
+        "tags" : [ "contact" ],
+        "summary" : "add contact",
+        "description" : "Create a new contact and return it",
+        "operationId" : "createContact",
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "userId",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/ContactRequest"
           }
-        ],
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "schema": {
-              "$ref": "#/definitions/Contact"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Ok",
+            "schema" : {
+              "$ref" : "#/definitions/ContactResponse"
             }
           },
-          "400": {
-            "description": "Bad request"
+          "400" : {
+            "description" : "Bad request"
           },
-          "500": {
-            "description": "Internal server error"
+          "500" : {
+            "description" : "Internal server error"
           }
         }
       }
     },
-    "/v1/users/{userId}/contacts/{contactId}": {
-      "get": {
-        "tags": [
-          "contact"
-        ],
-        "summary": "get contact",
-        "description": "Get a contact",
-        "operationId": "getContact",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "contactId",
-            "in": "path",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "schema": {
-              "$ref": "#/definitions/Contact"
+    "/v1/users/{userId}/contacts/{contactId}" : {
+      "get" : {
+        "tags" : [ "contact" ],
+        "summary" : "get contact",
+        "description" : "Get a contact",
+        "operationId" : "getContact",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "userId",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "contactId",
+          "in" : "path",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Ok",
+            "schema" : {
+              "$ref" : "#/definitions/ContactResponse"
             }
           },
-          "400": {
-            "description": "Bad request"
+          "400" : {
+            "description" : "Bad request"
           },
-          "404": {
-            "description": "Not found"
+          "404" : {
+            "description" : "Not found"
           },
-          "500": {
-            "description": "Internal server error"
+          "500" : {
+            "description" : "Internal server error"
           }
         }
       },
-      "put": {
-        "tags": [
-          "contact"
-        ],
-        "summary": "add contact",
-        "description": "Update a contact and return it",
-        "operationId": "updateContact",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "contactId",
-            "in": "path",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          },
-          {
-            "in": "body",
-            "name": "body",
-            "required": false,
-            "schema": {
-              "$ref": "#/definitions/ContactDetails"
-            }
+      "put" : {
+        "tags" : [ "contact" ],
+        "summary" : "add contact",
+        "description" : "Update a contact and return it",
+        "operationId" : "updateContact",
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "userId",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "contactId",
+          "in" : "path",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/ContactRequest"
           }
-        ],
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "schema": {
-              "$ref": "#/definitions/Contact"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Ok",
+            "schema" : {
+              "$ref" : "#/definitions/ContactResponse"
             }
           },
-          "400": {
-            "description": "Bad request"
+          "400" : {
+            "description" : "Bad request"
           },
-          "404": {
-            "description": "Not Found"
+          "404" : {
+            "description" : "Not Found"
           },
-          "500": {
-            "description": "Internal server error"
+          "500" : {
+            "description" : "Internal server error"
           }
         }
       },
-      "delete": {
-        "tags": [
-          "contact"
-        ],
-        "summary": "delete contact",
-        "description": "Delete a contact",
-        "operationId": "deleteContact",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "type": "string"
+      "delete" : {
+        "tags" : [ "contact" ],
+        "summary" : "delete contact",
+        "description" : "Delete a contact",
+        "operationId" : "deleteContact",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "userId",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "contactId",
+          "in" : "path",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "201" : {
+            "description" : "No content"
           },
-          {
-            "name": "contactId",
-            "in": "path",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "No content"
+          "400" : {
+            "description" : "Bad request"
           },
-          "400": {
-            "description": "Bad request"
+          "404" : {
+            "description" : "Not found"
           },
-          "404": {
-            "description": "Not found"
-          },
-          "500": {
-            "description": "Internal server error"
+          "500" : {
+            "description" : "Internal server error"
           }
         }
       }
     }
   },
-  "definitions": {
-    "Contact": {
-      "type": "object",
-      "properties": {
-        "firstName": {
-          "type": "string",
-          "description": "First name"
+  "definitions" : {
+    "AddressRequest" : {
+      "type" : "object",
+      "properties" : {
+        "country" : {
+          "type" : "string"
         },
-        "lastName": {
-          "type": "string",
-          "description": "Last name"
+        "town" : {
+          "type" : "string"
         },
-        "email": {
-          "type": "string",
-          "description": "Email",
-          "pattern": ".+@.+\\..+"
+        "street" : {
+          "type" : "string"
         },
-        "relationship": {
-          "type": "string",
-          "description": "Relationship"
+        "number" : {
+          "type" : "integer",
+          "format" : "int32"
         },
-        "id": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Contact id"
+        "entrance" : {
+          "type" : "integer",
+          "format" : "int32"
         },
-        "userId": {
-          "type": "string",
-          "description": "Used id"
+        "flatNumber" : {
+          "type" : "integer",
+          "format" : "int32"
         }
       },
-      "description": "User Contacts"
+      "description" : "Address"
     },
-    "ContactDetails": {
-      "type": "object",
-      "properties": {
-        "firstName": {
-          "type": "string",
-          "description": "First name"
+    "AddressResponse" : {
+      "type" : "object",
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int64"
         },
-        "lastName": {
-          "type": "string",
-          "description": "Last name"
+        "country" : {
+          "type" : "string"
         },
-        "email": {
-          "type": "string",
-          "description": "Email",
-          "pattern": ".+@.+\\..+"
+        "town" : {
+          "type" : "string"
         },
-        "relationship": {
-          "type": "string",
-          "description": "Relationship"
+        "street" : {
+          "type" : "string"
+        },
+        "number" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "entrance" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "flatNumber" : {
+          "type" : "integer",
+          "format" : "int32"
         }
       },
-      "description": "User Contacts"
+      "description" : "Address"
+    },
+    "ContactRequest" : {
+      "type" : "object",
+      "properties" : {
+        "firstName" : {
+          "type" : "string",
+          "description" : "First name"
+        },
+        "lastName" : {
+          "type" : "string",
+          "description" : "Last name"
+        },
+        "email" : {
+          "type" : "string",
+          "description" : "Email",
+          "pattern" : ".+@.+\\..+"
+        },
+        "relationship" : {
+          "type" : "string",
+          "description" : "Relationship"
+        },
+        "phoneNumbers" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/PhoneNumberDetails"
+          }
+        },
+        "addresses" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/AddressRequest"
+          }
+        }
+      },
+      "description" : "User Contacts"
+    },
+    "ContactResponse" : {
+      "type" : "object",
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int64",
+          "description" : "Contact id"
+        },
+        "userId" : {
+          "type" : "string",
+          "description" : "Used id"
+        },
+        "firstName" : {
+          "type" : "string",
+          "description" : "First name"
+        },
+        "lastName" : {
+          "type" : "string",
+          "description" : "Last name"
+        },
+        "email" : {
+          "type" : "string",
+          "description" : "Email",
+          "pattern" : ".+@.+\\..+"
+        },
+        "relationship" : {
+          "type" : "string",
+          "description" : "Relationship"
+        },
+        "phoneNumbers" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/PhoneNumberDetails"
+          }
+        },
+        "addresses" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/AddressResponse"
+          }
+        }
+      },
+      "description" : "User Contacts"
+    },
+    "PhoneNumberDetails" : {
+      "type" : "object",
+      "properties" : {
+        "number" : {
+          "type" : "string"
+        },
+        "description" : {
+          "type" : "string",
+          "minLength" : 1,
+          "maxLength" : 2147483647
+        }
+      },
+      "description" : "Phone Number Details"
     }
   }
 }
